2008-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Rule.cs: Change Convert method to static
	(self-test).

2008-05-09  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Rule.cs: New. Rule to ensure we're not 
	generating code limiting IntPtr to work on 32bits architectures.
	* Makefile.am: Add rule and test to the build.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Add Equals,
	GetHashCode and ==,!= operators on Branch to satisfy 
	OverrideValueTypeDefaultsRule.
	* UseManagedAlternativesToPInvokeRule.cs: Add Equals(PInvokeCall) 
	method to satisfy ImplementEqualsTypeRule.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Change to static
	and initialize it directly.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Fix the case
	where the p/invoke is inside another assembly using the 
	AssemblyResolver.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs
	* MarshalStringsInPInvokeDeclarationsRule.cs
	* PInvokeShouldNotBeVisibleRule.cs
	* UseManagedAlternativesToPInvokeRule.cs:
		Update rules wrt framework changes.

2008-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Changed to
	use the new shared StackEntryAnalysis by Andreas Noever. Refactored
	(split) by me to reduce self-test complaints ;-)

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* MarshalStringsInPInvokeDeclarationsRule.cs: New. Rule to ensure 
	all string and StringBuilder have marshalling information 
	[Daniel Abramov]
	* Gendarme.Rules.Interoperability.xml.in: Add rule description and
	update Uri for all of them.
	* Makefile.am: Add rule and test to the build.

2008-01-28  Sebastien Pouliot  <sebastien@ximian.com>
